<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Название преступления.</string>
    <string name="crime_title_label">Заголовок</string>
    <string name="crime_details_label">Детали</string>
    <string name="crime_solved_label">Решено</string>
    <string name="crime_photo_button_description">Сфотографируйте место преступления</string>
    <string name="crime_photo_no_image_description">Фотография места преступления (не установлена)</string>
    <string name="crime_photo_image_description">Фотография с места преступления (установлена)</string>
    <string name="requires_police">Вызвать полицию</string>
    <string name="new_crime">Новое преступление</string>
    <string name="empty_list">Список пуст</string>
    <string name="crime_suspect_text">Выбрать подозреваемого</string>
    <string name="crime_report_text">Отправить отчет о преступлении</string>
    <string name="crime_report">%1$s! Преступление совершено %2$s. %3$s, %4$s</string>
    <string name="crime_report_solved">Дело раскрыто</string>
    <string name="crime_report_unsolved">Дело не раскрыто</string>
    <string name="crime_report_no_suspect">подозреваемого нет.</string>
    <string name="crime_report_suspect">подозреваемый %s.</string>
    <string name="crime_report_subject">CriminalIntent Отчет о преступлении</string>
    <string name="send_report">Отправить отчет о преступлении через</string>
    <string name="zoom_image">Увеличенное изображение</string>
    <string name="call_no_suspect">Позвонить подозреваемому(не установлен)</string>
    <string name="call_suspect">Позвонить подозреваемому(установлен)</string>
    <string name="crime_solved_description">Преступление раскрыто</string>
    <string name="date">Дата</string>
    <string name="Report">Отчет</string>
</resources>